--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.12",
@@ -20,7 +21,9 @@
     "@angular/router": "^16.2.0",
     "@ant-design/icons": "^6.0.0",
     "@ctrl/tinycolor": "^4.1.0",
+    "chart.js": "^4.4.0",
     "ng-zorro-antd": "^16.2.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "zone.js": "~0.13.0"
