--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ant-design/icons": "^6.0.0",
     "@ctrl/tinycolor": "^4.1.0",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ng-zorro-antd": "^16.2.2",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
