--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^16.2.0",
     "@ant-design/icons": "^6.0.0",
     "@ctrl/tinycolor": "^4.1.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "chart.js": "^4.4.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "jwt-decode": "^4.0.0",
