--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,34 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
-/node_modules
+### Node / Angular ###
+node_modules/
+dist/
+.angular/
+tmp/
+out-tsc/
+bazel-out/
+coverage/
+libpeerconnection.log
 npm-debug.log
 yarn-error.log
+testem.log
 
-# IDEs and editors
+### IDEs ###
 .idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
+.settings/
+*.sublime-workspace
+.c9/
+.project
+.classpath
 
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+### System ###
 .DS_Store
 Thumbs.db
+.history/
+
+### Env & Secrets ###
+.env
+*.env
