--- a/angular.json
+++ b/angular.json
@@ -46,17 +46,10 @@
           "configurations": {
             "production": {
               "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
+                { "type": "initial",      "maximumWarning": "2.5mb", "maximumError": "3mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "300kb", "maximumError": "400kb" }
+              ]
+              ,
               "outputHashing": "all"
             },
             "development": {
