fixes from the start

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,14 @@
 sonar.projectKey=stationsync-frontend
-sonar.projectName=stationsync-frontend
+sonar.projectName=StationSync Frontend
 sonar.sourceEncoding=UTF-8
 
-# Code source & tests
+# Sources & tests
 sonar.sources=src
 sonar.tests=src
-sonar.test.inclusions=src/**/*.spec.ts
-sonar.exclusions=**/node_modules/**,**/dist/**
+sonar.test.inclusions=**/*.spec.ts
+sonar.exclusions=**/*.spec.ts,**/environments/**,**/*.scss,**/*.css,**/*.svg,**/*.png,**/*.jpg
 
-# TypeScript
+# Coverage report (Angular/Karma)
+# After tests, Angular writes lcov to: coverage/<your-app-name>/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/*/lcov.info
 sonar.typescript.tsconfigPath=tsconfig.json
-
-# Couverture (Angular génère coverage/**/lcov.info)
-sonar.javascript.lcov.reportPaths=coverage/**/lcov.info
-sonar.typescript.lcov.reportPaths=coverage/**/lcov.info
